**Releases:

v7.x-4.0
---------
- New system for latecomers
- Added update function
- Setup form for latecomers to set reasons

v7.x-3.5
---------
- Stronger caching
- Better function definitions and use of argus - Engine

v7.x-3.4
---------
- Betere block definitie

v7.x-3.3
---------
- Update in menu config and preparation for module installation

v7.x-3.2
---------
- Added install scripts

v7.x-3.1
---------
- Security update

v7.x-3.0
---------
- Added new features:
- Added new package for handling Latecomers (Telaatkomers), includes also rectification-process
- Added new theme-supported screens for students

v7.x-2.0
---------
- Added overview of status B-codes

v7.x-1.0
---------
- First initial release

**Unreleased:
(check also forum, blog and projectstatus - issues and tickets)